Add try-catch block around solver call. time_SOR = inf now indicates that something unexpected happened

--- a/results/Evaluation_Paper.ipynb
+++ b/results/Evaluation_Paper.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,17 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = load_obj('SOR_all_instances_0.5')\n",
+    "results = load_obj('intermediate_results_0.5')\n",
     "store_FRA_results_for_Bonmin()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -99,165 +99,66 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>edgecross14-098</th>\n",
-       "      <td>(183, 182, 182)</td>\n",
-       "      <td>(1457, 1, 1, 1)</td>\n",
-       "      <td>$1,800.29</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$2,143.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>edgecross14-117</th>\n",
-       "      <td>(183, 182, 182)</td>\n",
-       "      <td>(1457, 1, 1, 1)</td>\n",
-       "      <td>$1,800.26</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$3,011.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>edgecross14-137</th>\n",
-       "      <td>(183, 182, 182)</td>\n",
-       "      <td>(1457, 1, 1, 1)</td>\n",
-       "      <td>$1,800.28</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$4,129.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>edgecross20-080</th>\n",
-       "      <td>(381, 380, 380)</td>\n",
-       "      <td>(4561, 1, 1, 1)</td>\n",
-       "      <td>$1,800.21</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$1,457.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>edgecross22-096</th>\n",
-       "      <td>(463, 462, 462)</td>\n",
-       "      <td>(6161, 1, 1, 1)</td>\n",
-       "      <td>$1,800.43</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$2,221.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>edgecross24-115</th>\n",
-       "      <td>(553, 552, 552)</td>\n",
-       "      <td>(8097, 1, 1, 1)</td>\n",
-       "      <td>$1,800.21</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$3,269.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>faclay25</th>\n",
-       "      <td>(301, 300, 300)</td>\n",
-       "      <td>(4601, 1, 1, 1)</td>\n",
-       "      <td>$1,800.16</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$6,435.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>faclay30</th>\n",
-       "      <td>(436, 435, 435)</td>\n",
-       "      <td>(8121, 1, 1, 1)</td>\n",
-       "      <td>$1,800.18</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$11,400.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>faclay30h</th>\n",
-       "      <td>(436, 435, 435)</td>\n",
-       "      <td>(8121, 1, 1, 1)</td>\n",
-       "      <td>$1,800.61</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$65,126.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>faclay33</th>\n",
-       "      <td>(529, 528, 528)</td>\n",
-       "      <td>(10913, 1, 1, 1)</td>\n",
-       "      <td>$1,800.34</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$86,090.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>faclay35</th>\n",
-       "      <td>(596, 595, 595)</td>\n",
-       "      <td>(13091, 1, 1, 1)</td>\n",
-       "      <td>$1,800.35</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$98,871.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sporttournament44</th>\n",
-       "      <td>(947, 946, 946)</td>\n",
+       "      <th>autocorr_bern20_03</th>\n",
+       "      <td>(21, 20, 20)</td>\n",
        "      <td>(1, 1, 1, 1)</td>\n",
-       "      <td>$1,800.29</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$0.00</td>\n",
+       "      <td>$0.19</td>\n",
+       "      <td>$0.10</td>\n",
+       "      <td>$80.00</td>\n",
+       "      <td>$-144.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>sporttournament50</th>\n",
-       "      <td>(1226, 1225, 1225)</td>\n",
+       "      <th>autocorr_bern25_03</th>\n",
+       "      <td>(26, 25, 25)</td>\n",
        "      <td>(1, 1, 1, 1)</td>\n",
-       "      <td>$1,800.28</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$inf</td>\n",
+       "      <td>$0.16</td>\n",
+       "      <td>$0.11</td>\n",
+       "      <td>$96.00</td>\n",
+       "      <td>$-184.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>blend029</th>\n",
+       "      <td>(102, 36, 36)</td>\n",
+       "      <td>(213, 12, 0, 0)</td>\n",
        "      <td>$0.00</td>\n",
+       "      <td>$0.31</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>blend146</th>\n",
+       "      <td>(222, 87, 87)</td>\n",
+       "      <td>(624, 24, 0, 0)</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>$30.77</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 vars           constrs    time L  time SOR  \\\n",
-       "edgecross14-098       (183, 182, 182)   (1457, 1, 1, 1) $1,800.29      $inf   \n",
-       "edgecross14-117       (183, 182, 182)   (1457, 1, 1, 1) $1,800.26      $inf   \n",
-       "edgecross14-137       (183, 182, 182)   (1457, 1, 1, 1) $1,800.28      $inf   \n",
-       "edgecross20-080       (381, 380, 380)   (4561, 1, 1, 1) $1,800.21      $inf   \n",
-       "edgecross22-096       (463, 462, 462)   (6161, 1, 1, 1) $1,800.43      $inf   \n",
-       "edgecross24-115       (553, 552, 552)   (8097, 1, 1, 1) $1,800.21      $inf   \n",
-       "faclay25              (301, 300, 300)   (4601, 1, 1, 1) $1,800.16      $inf   \n",
-       "faclay30              (436, 435, 435)   (8121, 1, 1, 1) $1,800.18      $inf   \n",
-       "faclay30h             (436, 435, 435)   (8121, 1, 1, 1) $1,800.61      $inf   \n",
-       "faclay33              (529, 528, 528)  (10913, 1, 1, 1) $1,800.34      $inf   \n",
-       "faclay35              (596, 595, 595)  (13091, 1, 1, 1) $1,800.35      $inf   \n",
-       "sporttournament44     (947, 946, 946)      (1, 1, 1, 1) $1,800.29      $inf   \n",
-       "sporttournament50  (1226, 1225, 1225)      (1, 1, 1, 1) $1,800.28      $inf   \n",
+       "                             vars          constrs  time L  time SOR    obj  \\\n",
+       "autocorr_bern20_03   (21, 20, 20)     (1, 1, 1, 1)   $0.19     $0.10 $80.00   \n",
+       "autocorr_bern25_03   (26, 25, 25)     (1, 1, 1, 1)   $0.16     $0.11 $96.00   \n",
+       "blend029            (102, 36, 36)  (213, 12, 0, 0)   $0.00     $0.31   $inf   \n",
+       "blend146            (222, 87, 87)  (624, 24, 0, 0)   $0.00    $30.77   $inf   \n",
        "\n",
-       "                   obj  constr_value  \n",
-       "edgecross14-098   $inf     $2,143.00  \n",
-       "edgecross14-117   $inf     $3,011.00  \n",
-       "edgecross14-137   $inf     $4,129.00  \n",
-       "edgecross20-080   $inf     $1,457.00  \n",
-       "edgecross22-096   $inf     $2,221.00  \n",
-       "edgecross24-115   $inf     $3,269.00  \n",
-       "faclay25          $inf     $6,435.00  \n",
-       "faclay30          $inf    $11,400.00  \n",
-       "faclay30h         $inf    $65,126.00  \n",
-       "faclay33          $inf    $86,090.00  \n",
-       "faclay35          $inf    $98,871.00  \n",
-       "sporttournament44 $inf         $0.00  \n",
-       "sporttournament50 $inf         $0.00  "
+       "                    constr_value  \n",
+       "autocorr_bern20_03      $-144.00  \n",
+       "autocorr_bern25_03      $-184.00  \n",
+       "blend029                   $-inf  \n",
+       "blend146                   $-inf  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results[results['time L'] >1800]"
+    "results"
    ]
   },
   {
