--- a/results/Evaluation_Paper.ipynb
+++ b/results/Evaluation_Paper.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -134,25 +134,135 @@
        "      <td>$inf</td>\n",
        "      <td>$-inf</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>blend480</th>\n",
+       "      <td>(312, 124, 124)</td>\n",
+       "      <td>(884, 32, 0, 0)</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>blend531</th>\n",
+       "      <td>(272, 104, 104)</td>\n",
+       "      <td>(736, 32, 0, 0)</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>$1.08</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>blend718</th>\n",
+       "      <td>(222, 87, 87)</td>\n",
+       "      <td>(606, 24, 0, 0)</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>$1.03</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>blend721</th>\n",
+       "      <td>(222, 87, 87)</td>\n",
+       "      <td>(627, 24, 0, 0)</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>$1.66</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>blend852</th>\n",
+       "      <td>(304, 120, 120)</td>\n",
+       "      <td>(860, 32, 0, 0)</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>$1.07</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>crudeoil_lee1_05</th>\n",
+       "      <td>(535, 40, 40)</td>\n",
+       "      <td>(1240, 160, 0, 0)</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>$2.26</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>crudeoil_lee1_06</th>\n",
+       "      <td>(642, 48, 48)</td>\n",
+       "      <td>(1503, 192, 0, 0)</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>$3.01</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>crudeoil_lee1_07</th>\n",
+       "      <td>(749, 56, 56)</td>\n",
+       "      <td>(1776, 224, 0, 0)</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>$5.85</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>crudeoil_lee1_08</th>\n",
+       "      <td>(856, 64, 64)</td>\n",
+       "      <td>(2059, 256, 0, 0)</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>$8.34</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>crudeoil_lee1_09</th>\n",
+       "      <td>(963, 72, 72)</td>\n",
+       "      <td>(2352, 288, 0, 0)</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>$18.06</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             vars          constrs  time L  time SOR    obj  \\\n",
-       "autocorr_bern20_03   (21, 20, 20)     (1, 1, 1, 1)   $0.19     $0.10 $80.00   \n",
-       "autocorr_bern25_03   (26, 25, 25)     (1, 1, 1, 1)   $0.16     $0.11 $96.00   \n",
-       "blend029            (102, 36, 36)  (213, 12, 0, 0)   $0.00     $0.31   $inf   \n",
-       "blend146            (222, 87, 87)  (624, 24, 0, 0)   $0.00    $30.77   $inf   \n",
+       "                               vars            constrs  time L  time SOR  \\\n",
+       "autocorr_bern20_03     (21, 20, 20)       (1, 1, 1, 1)   $0.19     $0.10   \n",
+       "autocorr_bern25_03     (26, 25, 25)       (1, 1, 1, 1)   $0.16     $0.11   \n",
+       "blend029              (102, 36, 36)    (213, 12, 0, 0)   $0.00     $0.31   \n",
+       "blend146              (222, 87, 87)    (624, 24, 0, 0)   $0.00    $30.77   \n",
+       "blend480            (312, 124, 124)    (884, 32, 0, 0)   $0.00      $inf   \n",
+       "blend531            (272, 104, 104)    (736, 32, 0, 0)   $0.00     $1.08   \n",
+       "blend718              (222, 87, 87)    (606, 24, 0, 0)   $0.00     $1.03   \n",
+       "blend721              (222, 87, 87)    (627, 24, 0, 0)   $0.00     $1.66   \n",
+       "blend852            (304, 120, 120)    (860, 32, 0, 0)   $0.00     $1.07   \n",
+       "crudeoil_lee1_05      (535, 40, 40)  (1240, 160, 0, 0)   $0.00     $2.26   \n",
+       "crudeoil_lee1_06      (642, 48, 48)  (1503, 192, 0, 0)   $0.00     $3.01   \n",
+       "crudeoil_lee1_07      (749, 56, 56)  (1776, 224, 0, 0)   $0.00     $5.85   \n",
+       "crudeoil_lee1_08      (856, 64, 64)  (2059, 256, 0, 0)   $0.00     $8.34   \n",
+       "crudeoil_lee1_09      (963, 72, 72)  (2352, 288, 0, 0)   $0.00    $18.06   \n",
        "\n",
-       "                    constr_value  \n",
-       "autocorr_bern20_03      $-144.00  \n",
-       "autocorr_bern25_03      $-184.00  \n",
-       "blend029                   $-inf  \n",
-       "blend146                   $-inf  "
+       "                      obj  constr_value  \n",
+       "autocorr_bern20_03 $80.00      $-144.00  \n",
+       "autocorr_bern25_03 $96.00      $-184.00  \n",
+       "blend029             $inf         $-inf  \n",
+       "blend146             $inf         $-inf  \n",
+       "blend480             $inf         $-inf  \n",
+       "blend531             $inf         $-inf  \n",
+       "blend718             $inf         $-inf  \n",
+       "blend721             $inf         $-inf  \n",
+       "blend852             $inf         $-inf  \n",
+       "crudeoil_lee1_05     $inf         $-inf  \n",
+       "crudeoil_lee1_06     $inf         $-inf  \n",
+       "crudeoil_lee1_07     $inf         $-inf  \n",
+       "crudeoil_lee1_08     $inf         $-inf  \n",
+       "crudeoil_lee1_09     $inf         $-inf  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
