Fixed bug comming from setting the eips to none but then trying to enlarge it.

--- a/results/Evaluation_Paper.ipynb
+++ b/results/Evaluation_Paper.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,7 @@
     "pd.options.display.float_format = '${:,.2f}'.format\n",
     "import numpy as np\n",
     "import pickle\n",
+    "from ast import literal_eval\n",
     "\n",
     "def load_obj(name ):\n",
     "    with open(name + '.pkl', 'rb') as f:\n",
@@ -79,7 +80,29 @@
     "    epi_subset = result['constr_value'] != float('-inf') \n",
     "    result.loc[epi_subset,'obj'] = np.array(result[epi_subset]['obj']+result[epi_subset]['constr_value'])\n",
     "    result = result.drop('constr_value',axis=1)\n",
-    "    return result"
+    "    return result\n",
+    "\n",
+    "def print_numbers_of_different_problemclasses(results):\n",
+    "    class0 = 0\n",
+    "    class1 = 0\n",
+    "    class2 = 0\n",
+    "    for name in results_overall.index.to_list():\n",
+    "        constr_tuple = literal_eval(results_overall.loc[name].constrs)\n",
+    "        if constr_tuple[2] == 0:\n",
+    "            class0 +=1\n",
+    "        elif constr_tuple[3] == 0:\n",
+    "            class1 +=1\n",
+    "        else:\n",
+    "            class2 += 1\n",
+    "    print(class0,class1,class2)\n",
+    "    \n",
+    "def print_numbers_of_purely_epi_problems(results):\n",
+    "    epi_problems = 0\n",
+    "    for name in results_overall.index.to_list():\n",
+    "        constr_array = np.array(literal_eval(results_overall.loc[name].constrs))\n",
+    "        if all(constr_array == 1):\n",
+    "            epi_problems +=1\n",
+    "    print(epi_problems)"
    ]
   },
   {
@@ -94,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,30 +139,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "52"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(results_pseudo_granular)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "So we obtain feasible points for 52 optimization problems with $\\delta = 0.9999$. Let us initially analyze the difficulty of the auxiliary problem."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68 10 132\n",
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_numbers_of_different_problemclasses(results_overall)\n",
+    "print_numbers_of_purely_epi_problems(results_overall)"
    ]
   },
   {
