add numpy results to the repo

--- a/results/Evaluation_Paper.ipynb
+++ b/results/Evaluation_Paper.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "for filename in ['SOR_all_instances_0.5','SOR_all_instances_0.75_v2','SOR_all_instances_0.9999_v2']:\n",
+    "for filename in ['SOR_all_instances_0.5','SOR_all_instances_0.75','SOR_all_instances_0.9999']:\n",
     "    results_overall = load_obj(filename)\n",
     "    results_L_computable = load_problems_with_computable_Lipschitz_constant(filename)\n",
     "    results_pseudo_granular = load_successful_results(filename)\n",
@@ -153,28 +153,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "store_FRA_results_for_Bonmin(results_pseudo_granular)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "52  Problems are pseudo granular\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hg2412\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:543: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[item] = s\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -196,269 +186,131 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>old</th>\n",
-       "      <th>new</th>\n",
+       "      <th>vars</th>\n",
+       "      <th>constrs</th>\n",
+       "      <th>time L</th>\n",
+       "      <th>time SOR</th>\n",
+       "      <th>obj</th>\n",
+       "      <th>constr_value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>cvxnonsep_normcon20r</th>\n",
-       "      <td>$-14.65</td>\n",
-       "      <td>$-14.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>cvxnonsep_normcon30r</th>\n",
-       "      <td>$-14.80</td>\n",
-       "      <td>$-14.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ex1223a</th>\n",
-       "      <td>$6.07</td>\n",
-       "      <td>$6.07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ex4</th>\n",
-       "      <td>$-6.70</td>\n",
-       "      <td>$-6.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>genpooling_lee1</th>\n",
-       "      <td>$-4,309.83</td>\n",
-       "      <td>$-4,309.83</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>genpooling_lee2</th>\n",
-       "      <td>$-3,759.46</td>\n",
-       "      <td>$-3,849.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>genpooling_meyer10</th>\n",
-       "      <td>$5,504,875.19</td>\n",
-       "      <td>$5,129,659.13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>genpooling_meyer15</th>\n",
-       "      <td>$6,544,066.67</td>\n",
-       "      <td>$6,581,050.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ndcc12</th>\n",
-       "      <td>$108.11</td>\n",
-       "      <td>$108.11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ndcc13</th>\n",
-       "      <td>$107.57</td>\n",
-       "      <td>$107.57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ndcc14</th>\n",
-       "      <td>$143.31</td>\n",
-       "      <td>$143.31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ndcc15</th>\n",
-       "      <td>$102.42</td>\n",
-       "      <td>$102.42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ndcc16</th>\n",
-       "      <td>$145.89</td>\n",
-       "      <td>$145.89</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>nous1</th>\n",
-       "      <td>$1.57</td>\n",
-       "      <td>$1.57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>nous2</th>\n",
-       "      <td>$1.38</td>\n",
-       "      <td>$0.63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ringpack_10_1</th>\n",
-       "      <td>$-4.17</td>\n",
-       "      <td>$-4.17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ringpack_10_2</th>\n",
+       "      <th>gabriel09</th>\n",
+       "      <td>(1868, 756, 756)</td>\n",
+       "      <td>(10088, 288, 0, 0)</td>\n",
        "      <td>$0.00</td>\n",
+       "      <td>$1,821.60</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ringpack_30_2</th>\n",
+       "      <td>(463, 403, 403)</td>\n",
+       "      <td>(8768, 8303, 8303, 0)</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>$1,810.03</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>smallinvSNPr3b010-011</th>\n",
+       "      <td>(101, 100, 0)</td>\n",
+       "      <td>(4, 1, 1, 1)</td>\n",
+       "      <td>$0.20</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$inf</td>\n",
        "      <td>$0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ringpack_20_1</th>\n",
-       "      <td>$-4.17</td>\n",
-       "      <td>$-4.17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ringpack_20_2</th>\n",
+       "      <th>smallinvSNPr3b020-022</th>\n",
+       "      <td>(101, 100, 0)</td>\n",
+       "      <td>(4, 1, 1, 1)</td>\n",
+       "      <td>$0.20</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$inf</td>\n",
        "      <td>$0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>smallinvSNPr3b050-055</th>\n",
+       "      <td>(101, 100, 0)</td>\n",
+       "      <td>(4, 1, 1, 1)</td>\n",
+       "      <td>$0.22</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$inf</td>\n",
        "      <td>$0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ringpack_30_1</th>\n",
-       "      <td>$-6.26</td>\n",
-       "      <td>$-6.26</td>\n",
+       "      <th>smallinvSNPr3b100-110</th>\n",
+       "      <td>(101, 100, 0)</td>\n",
+       "      <td>(4, 1, 1, 1)</td>\n",
+       "      <td>$0.19</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>smallinvDAXr1b150-165</th>\n",
-       "      <td>$100.66</td>\n",
-       "      <td>$100.66</td>\n",
+       "      <th>smallinvSNPr3b150-165</th>\n",
+       "      <td>(101, 100, 0)</td>\n",
+       "      <td>(4, 1, 1, 1)</td>\n",
+       "      <td>$0.20</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>smallinvDAXr1b200-220</th>\n",
-       "      <td>$175.19</td>\n",
-       "      <td>$175.19</td>\n",
+       "      <th>smallinvSNPr3b200-220</th>\n",
+       "      <td>(101, 100, 0)</td>\n",
+       "      <td>(4, 1, 1, 1)</td>\n",
+       "      <td>$0.20</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>smallinvDAXr2b150-165</th>\n",
-       "      <td>$100.66</td>\n",
-       "      <td>$100.66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>smallinvDAXr2b200-220</th>\n",
-       "      <td>$175.19</td>\n",
-       "      <td>$175.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>smallinvDAXr3b150-165</th>\n",
-       "      <td>$100.66</td>\n",
-       "      <td>$100.66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>smallinvDAXr3b200-220</th>\n",
-       "      <td>$175.19</td>\n",
-       "      <td>$175.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>smallinvDAXr4b150-165</th>\n",
-       "      <td>$100.66</td>\n",
-       "      <td>$100.66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>smallinvDAXr4b200-220</th>\n",
-       "      <td>$175.19</td>\n",
-       "      <td>$175.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>smallinvDAXr5b150-165</th>\n",
-       "      <td>$100.66</td>\n",
-       "      <td>$100.66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>smallinvDAXr5b200-220</th>\n",
-       "      <td>$175.19</td>\n",
-       "      <td>$175.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sonet17v4</th>\n",
-       "      <td>$1,816,146.00</td>\n",
-       "      <td>$1,816,146.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sonet18v6</th>\n",
-       "      <td>$6,925,440.00</td>\n",
-       "      <td>$6,925,440.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sonet19v5</th>\n",
-       "      <td>$4,806,792.00</td>\n",
-       "      <td>$4,806,792.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sonet20v6</th>\n",
-       "      <td>$9,245,610.00</td>\n",
-       "      <td>$9,245,610.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sonet21v6</th>\n",
-       "      <td>$10,674,610.00</td>\n",
-       "      <td>$10,674,610.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sonet22v4</th>\n",
-       "      <td>$3,408,192.00</td>\n",
-       "      <td>$3,408,192.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sonet23v6</th>\n",
-       "      <td>$12,764,340.00</td>\n",
-       "      <td>$12,764,340.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sonet24v2</th>\n",
-       "      <td>$21,512,599.00</td>\n",
-       "      <td>$21,512,599.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>supplychain</th>\n",
-       "      <td>$2,288.16</td>\n",
-       "      <td>$2,288.16</td>\n",
+       "      <th>sonet25v5</th>\n",
+       "      <td>(300, 300, 300)</td>\n",
+       "      <td>(6925, 25, 25, 25)</td>\n",
+       "      <td>$4.62</td>\n",
+       "      <td>$1,833.15</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 old            new\n",
-       "cvxnonsep_normcon20r         $-14.65        $-14.65\n",
-       "cvxnonsep_normcon30r         $-14.80        $-14.80\n",
-       "ex1223a                        $6.07          $6.07\n",
-       "ex4                           $-6.70         $-6.70\n",
-       "genpooling_lee1           $-4,309.83     $-4,309.83\n",
-       "genpooling_lee2           $-3,759.46     $-3,849.24\n",
-       "genpooling_meyer10     $5,504,875.19  $5,129,659.13\n",
-       "genpooling_meyer15     $6,544,066.67  $6,581,050.03\n",
-       "ndcc12                       $108.11        $108.11\n",
-       "ndcc13                       $107.57        $107.57\n",
-       "ndcc14                       $143.31        $143.31\n",
-       "ndcc15                       $102.42        $102.42\n",
-       "ndcc16                       $145.89        $145.89\n",
-       "nous1                          $1.57          $1.57\n",
-       "nous2                          $1.38          $0.63\n",
-       "ringpack_10_1                 $-4.17         $-4.17\n",
-       "ringpack_10_2                  $0.00          $0.00\n",
-       "ringpack_20_1                 $-4.17         $-4.17\n",
-       "ringpack_20_2                  $0.00          $0.00\n",
-       "ringpack_30_1                 $-6.26         $-6.26\n",
-       "smallinvDAXr1b150-165        $100.66        $100.66\n",
-       "smallinvDAXr1b200-220        $175.19        $175.19\n",
-       "smallinvDAXr2b150-165        $100.66        $100.66\n",
-       "smallinvDAXr2b200-220        $175.19        $175.19\n",
-       "smallinvDAXr3b150-165        $100.66        $100.66\n",
-       "smallinvDAXr3b200-220        $175.19        $175.19\n",
-       "smallinvDAXr4b150-165        $100.66        $100.66\n",
-       "smallinvDAXr4b200-220        $175.19        $175.19\n",
-       "smallinvDAXr5b150-165        $100.66        $100.66\n",
-       "smallinvDAXr5b200-220        $175.19        $175.19\n",
-       "sonet17v4              $1,816,146.00  $1,816,146.00\n",
-       "sonet18v6              $6,925,440.00  $6,925,440.00\n",
-       "sonet19v5              $4,806,792.00  $4,806,792.00\n",
-       "sonet20v6              $9,245,610.00  $9,245,610.00\n",
-       "sonet21v6             $10,674,610.00 $10,674,610.00\n",
-       "sonet22v4              $3,408,192.00  $3,408,192.00\n",
-       "sonet23v6             $12,764,340.00 $12,764,340.00\n",
-       "sonet24v2             $21,512,599.00 $21,512,599.00\n",
-       "supplychain                $2,288.16      $2,288.16"
+       "                                   vars                constrs  time L  \\\n",
+       "gabriel09              (1868, 756, 756)     (10088, 288, 0, 0)   $0.00   \n",
+       "ringpack_30_2           (463, 403, 403)  (8768, 8303, 8303, 0)   $0.00   \n",
+       "smallinvSNPr3b010-011     (101, 100, 0)           (4, 1, 1, 1)   $0.20   \n",
+       "smallinvSNPr3b020-022     (101, 100, 0)           (4, 1, 1, 1)   $0.20   \n",
+       "smallinvSNPr3b050-055     (101, 100, 0)           (4, 1, 1, 1)   $0.22   \n",
+       "smallinvSNPr3b100-110     (101, 100, 0)           (4, 1, 1, 1)   $0.19   \n",
+       "smallinvSNPr3b150-165     (101, 100, 0)           (4, 1, 1, 1)   $0.20   \n",
+       "smallinvSNPr3b200-220     (101, 100, 0)           (4, 1, 1, 1)   $0.20   \n",
+       "sonet25v5               (300, 300, 300)     (6925, 25, 25, 25)   $4.62   \n",
+       "\n",
+       "                       time SOR  obj  constr_value  \n",
+       "gabriel09             $1,821.60 $inf         $-inf  \n",
+       "ringpack_30_2         $1,810.03 $inf         $-inf  \n",
+       "smallinvSNPr3b010-011      $inf $inf         $0.00  \n",
+       "smallinvSNPr3b020-022      $inf $inf         $0.00  \n",
+       "smallinvSNPr3b050-055      $inf $inf         $0.00  \n",
+       "smallinvSNPr3b100-110      $inf $inf         $0.00  \n",
+       "smallinvSNPr3b150-165      $inf $inf         $0.00  \n",
+       "smallinvSNPr3b200-220      $inf $inf         $0.00  \n",
+       "sonet25v5             $1,833.15 $inf         $-inf  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res_pseudo_gran2 = load_successful_results('SOR_all_instances_0.9999')\n",
-    "res_pseudo_gran2 = filter_out_only_epi_problems(res_pseudo_gran2)\n",
-    "res_pseudo_gran2 = update_objective_value_epi_problems(res_pseudo_gran2)\n",
-    "\n",
-    "results_pseudo_granular = filter_out_only_epi_problems(results_pseudo_granular)\n",
-    "results_pseudo_granular = update_objective_value_epi_problems(results_pseudo_granular)\n",
-    "\n",
-    "comp = pd.concat([res_pseudo_gran2['obj'],results_pseudo_granular['obj']],axis = 1)\n",
-    "comp.columns = ['old','new']\n",
-    "comp"
+    "results_L_computable.loc[results_L_computable['time SOR']>1800]"
    ]
   },
   {
@@ -470,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
